outputs/tsp_aco-aco/2026-03-05_09-45-47/problem_iter10_response2.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 596
    enhanced[i, j] = enhanced[j, i] *= boost
                                    ^^
SyntaxError: invalid syntax
